<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">
    <TextView
            android:layout_width="215dp"
            android:layout_height="35dp"
            android:text="@string/lblTitle"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:singleLine="true"/>

    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/lblFirstname"
            android:singleLine="true"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/txtFirstname"
              android:inputType="text"/>

    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/lblLastname"
            android:singleLine="true"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/txtLastname"
              android:inputType="text"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/lblEmail"
            android:singleLine="true"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/txtEmail"
              android:inputType="textEmailAddress"/>

    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/lblCellphoneNumber"
            android:singleLine="true"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/txtCellphone"
              android:inputType="phone"/>

    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/lblHomeAddress"
            android:singleLine="true"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/txtHomeAddress"
              android:inputType="textPostalAddress"/>


    <Button android:text="@string/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreate"/>

    <Button android:text="@string/btnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDisplay"/>

</LinearLayout>

